--- a/ExpenseApp.Data/App.config
+++ b/ExpenseApp.Data/App.config
@@ -14,4 +14,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="ExpenseAppEntities" connectionString="metadata=res://*/ExpenseAppDataEntity.csdl|res://*/ExpenseAppDataEntity.ssdl|res://*/ExpenseAppDataEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VPHQ-DEV-62\MSSQLSERVER2;initial catalog=Veripark.Expense;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
