--- a/ExpenseApp.Engine/ExpenseApp.Engine.csproj
+++ b/ExpenseApp.Engine/ExpenseApp.Engine.csproj
@@ -66,14 +66,15 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Domain\ExpenseDto.cs" />
     <Compile Include="Domain\ExpenseItemDto.cs" />
+    <Compile Include="Handlers\ExpenseHandlers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Domain\ViewModels\ExpenseItemViewModel.cs" />
     <Compile Include="Domain\ViewModels\ExpenseViewModel.cs" />
+    <Compile Include="Request\IdRequests.cs" />
+    <Compile Include="Request\ExpenseRequest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Enum\" />
-    <Folder Include="Handlers\" />
-    <Folder Include="Request\" />
     <Folder Include="Response\" />
   </ItemGroup>
   <ItemGroup>
