--- a/ExpenseApp/Web.config
+++ b/ExpenseApp/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ExpenseApp-20170126120222.mdf;Initial Catalog=aspnet-ExpenseApp-20170126120222;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ExpenseAppDataEntities" connectionString="metadata=res://*/Models.ExpenseAppModel.csdl|res://*/Models.ExpenseAppModel.ssdl|res://*/Models.ExpenseAppModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VPHQ-DEV-62\MSSQLSERVER2;initial catalog=Veripark.Expense;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!-- <add name="ExpenseAppEntities" connectionString="metadata=res://*/Models.ExpenseAppModel.csdl|res://*/Models.ExpenseAppModel.ssdl|res://*/Models.ExpenseAppModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VPHQ-DEV-62\MSSQLSERVER2;initial catalog=Veripark.Expense;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> -->
+    <add name="ExpenseAppEntities" connectionString="metadata=res://*/ExpenseAppDataEntity.csdl|res://*/ExpenseAppDataEntity.ssdl|res://*/ExpenseAppDataEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VPHQ-DEV-62\MSSQLSERVER2;initial catalog=Veripark.Expense;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
