--- a/ExpenseApp.Engine/ExpenseApp.Engine.csproj
+++ b/ExpenseApp.Engine/ExpenseApp.Engine.csproj
@@ -76,18 +76,30 @@
   <ItemGroup>
     <Compile Include="Domain\ExpenseDto.cs" />
     <Compile Include="Domain\ExpenseItemDto.cs" />
+    <Compile Include="Domain\IdDto.cs" />
+    <Compile Include="Domain\UserDto.cs" />
     <Compile Include="Domain\ViewModels\ExpenseItemViewModel.cs" />
     <Compile Include="Domain\ViewModels\ExpenseViewModel.cs" />
+    <Compile Include="Domain\ViewModels\UserViewModel.cs" />
+    <Compile Include="Handlers\ExpenseActionHandlers.cs" />
     <Compile Include="Handlers\ExpenseHandlers.cs" />
+    <Compile Include="Handlers\UserHandlers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Request\ExpenseApprovalRequest.cs" />
     <Compile Include="Request\ExpenseGetRequest.cs" />
     <Compile Include="Request\ExpenseSaveRequest.cs" />
     <Compile Include="Request\IdRequest.cs" />
+    <Compile Include="Request\LoginRequest.cs" />
+    <Compile Include="Response\ApprovalExpenseResponse.cs" />
     <Compile Include="Response\BaseResponse.cs" />
     <Compile Include="Response\DeleteExpenseResponse.cs" />
+    <Compile Include="Response\GetCurrentExpenseResponse.cs" />
+    <Compile Include="Response\GetCurrentUserResponse.cs" />
     <Compile Include="Response\GetExpenseItemsResponse.cs" />
     <Compile Include="Response\GetExpensesResponse.cs" />
+    <Compile Include="Response\LoginResponse.cs" />
     <Compile Include="Response\SaveExpenseResponse.cs" />
+    <Compile Include="Response\UserResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ExpenseApp.Data\ExpenseApp.Data.csproj">
