--- a/ExpenseApp.EmailService/App.config
+++ b/ExpenseApp.EmailService/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ExpenseAppEntities" connectionString="metadata=res://*/ExpenseAppEntities.csdl|res://*/ExpenseAppEntities.ssdl|res://*/ExpenseAppEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VPHQ-DEV-62\MSSQLSERVER2;initial catalog=Veripark.Expense;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="ExpenseDbContext" connectionString="Data Source=.;Initial Catalog=Expense;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
