--- a/ExpenseApp.Data/App.config
+++ b/ExpenseApp.Data/App.config
@@ -15,7 +15,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="ExpenseAppDataEntity" connectionString="metadata=res://*/ExpenseAppDataEntity.csdl|res://*/ExpenseAppDataEntity.ssdl|res://*/ExpenseAppDataEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VPHQ-DEV-62\MSSQLSERVER2;initial catalog=Veripark.Expense;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="ExpenseAppEntities" connectionString="metadata=res://*/ExpenseAppEntities.csdl|res://*/ExpenseAppEntities.ssdl|res://*/ExpenseAppEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VPHQ-DEV-62\MSSQLSERVER2;initial catalog=Veripark.Expense;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="ExpenseDbContext" connectionString="Data Source=.;Initial Catalog=Expense;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+  </startup>
 </configuration>
