--- a/ExpenseApp/Web.config
+++ b/ExpenseApp/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <log4net>
     <root>
@@ -17,8 +17,8 @@
     <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
       <bufferSize value="1" />
       <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-      <!--<connectionString value="metadata=res://*/ExpenseAppDataEntity.csdl|res://*/ExpenseAppDataEntity.ssdl|res://*/ExpenseAppDataEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VPHQ-DEV-62\MSSQLSERVER2;initial catalog=Veripark.Expense;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-      <connectionString value="data source=VPHQ-DEV-62\MSSQLSERVER2;initial catalog=Veripark.Expense;Integrated Security=True;MultipleActiveResultSets=True" />  <!--ID=[user];Password=[password]-->  
+      <connectionString value="data source=.;initial catalog=Expense;Integrated Security=True;MultipleActiveResultSets=True" />
+      <!--ID=[user];Password=[password]-->
       <commandText value="INSERT INTO Logs ([Level],[Message],[Exception],[LogDate]) VALUES (@log_level, @message, @exception, @log_date)" />
       <parameter>
         <parameterName value="@log_date" />
@@ -57,22 +57,26 @@
       </parameter>
     </appender>
   </log4net>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ExpenseApp-20170126120222.mdf;Initial Catalog=aspnet-ExpenseApp-20170126120222;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!-- <add name="ExpenseAppEntities" connectionString="metadata=res://*/Models.ExpenseAppModel.csdl|res://*/Models.ExpenseAppModel.ssdl|res://*/Models.ExpenseAppModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VPHQ-DEV-62\MSSQLSERVER2;initial catalog=Veripark.Expense;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> -->
-    <add name="ExpenseAppEntities" connectionString="metadata=res://*/ExpenseAppEntities.csdl|res://*/ExpenseAppEntities.ssdl|res://*/ExpenseAppEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VPHQ-DEV-62\MSSQLSERVER2;initial catalog=Veripark.Expense;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-
-    <!--<add name="ExpenseAppDataEntity" connectionString="metadata=res://*/ExpenseAppDataEntity.csdl|res://*/ExpenseAppDataEntity.ssdl|res://*/ExpenseAppDataEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VPHQ-DEV-62\MSSQLSERVER2;initial catalog=Veripark.Expense;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  </connectionStrings>
+	<connectionStrings>
+		<add name="ExpenseDbContext" connectionString="Data Source=.;Initial Catalog=Expense;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.5" />
     <sessionState timeout="5" />
   </system.web>
@@ -80,17 +84,18 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.2.0" newVersion="4.2.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" />
@@ -109,24 +114,28 @@
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.2.0" newVersion="5.2.2.0" />
-      </dependentAssembly>
-      <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.2.0" newVersion="5.2.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
